feat: add clj-async-profiler to gorp.core
So you can call `(prof/serve-files <PORT>)` on start