@@ -8,6 +8,8 @@ Have this in your deps.edn
 ```
 {:aliases
  {:gorp {:extra-deps {eltonlaw/gorp {:mvn/version "0.1.0"}}
+         ;; if using clj-async-profiler
+         :jvm-opts ["-Djdk.attach.allowAttachSelf"]
          :main-opts ["-m" "gorp.main"]}}}
 ```
 and invoke the regular way to start the repl
